--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.1",
     "framer-motion": "^4.1.17",
     "jotai": "^1.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.41.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
